// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentAPI renders with mandatory props for one component 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-1 {
  margin-bottom: 40px;
}

.emotion-2 {
  overflow-x: auto;
}

.emotion-3 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-5 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-8 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-9 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-10 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-11 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-13 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0;
}

.emotion-13 svg {
  fill: #555E74;
}

.emotion-16 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-18 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-18 svg {
  width: 16px;
  height: 16px;
}

.emotion-18 svg {
  fill: #148F39;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-20 {
    max-width: 100%;
  }
}

.emotion-21 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-21.emotion-21 {
  fill: #148F39;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <table
          class="emotion-3"
        >
          <thead>
            <tr>
              <th
                class="emotion-4"
              >
                Name
              </th>
              <th
                class="emotion-5"
              >
                Type
              </th>
              <th
                class="emotion-5"
              >
                Default
              </th>
              <th
                class="emotion-5"
              >
                Description
              </th>
              <th
                class="emotion-8"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-9"
            >
              <td
                class="emotion-10"
              >
                children
              </td>
              <td
                class="emotion-11"
              >
                <div
                  class="emotion-12"
                >
                  <p
                    class="emotion-13"
                  >
                    string
                  </p>
                </div>
              </td>
              <td
                class="emotion-11"
              />
              <td
                class="emotion-11"
              >
                Description.
              </td>
              <td
                class="emotion-16"
              >
                <div
                  class="emotion-17"
                >
                  <div
                    class="emotion-18"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-19"
                    >
                      <div
                        class="emotion-20"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-21 emotion-22"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentAPI renders with props for multiple components 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-1 {
  margin-bottom: 40px;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin-bottom: 20px;
  }
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-3 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-3 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-3::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.334375em;
  }

  .emotion-3::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.475em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-3::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.30104166666666665em;
  }

  .emotion-3::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

.emotion-4 {
  margin-bottom: 32px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-5 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-6 {
  overflow-x: auto;
}

.emotion-7 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-8 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-9 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-12 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-13 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-14 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-15 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-17 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0;
}

.emotion-17 svg {
  fill: #555E74;
}

.emotion-20 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-22 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-22 svg {
  width: 16px;
  height: 16px;
}

.emotion-22 svg {
  fill: #148F39;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-24 {
    max-width: 100%;
  }
}

.emotion-25 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-25.emotion-25 {
  fill: #148F39;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
  border-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-37 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  background-color: transparent;
  color: #577FFB;
}

.emotion-37 svg {
  width: 16px;
  height: 16px;
}

.emotion-37 svg {
  fill: #555E74;
}

.emotion-37:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-37:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-37:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-37:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-37:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-37:disabled svg {
  fill: #BBC3C9;
}

.emotion-37 svg {
  fill: #577FFB;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-39 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-39 {
    max-width: 100%;
  }
}

.emotion-40 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-40::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.4677083333333334em + -0.5px);
}

.emotion-40::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6083333333333334em;
}

.emotion-43 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-43 svg {
  width: 16px;
  height: 16px;
}

.emotion-43 svg {
  fill: #555E74;
}

.emotion-43:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-43:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-43:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-43:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-43:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-43:disabled svg {
  fill: #BBC3C9;
}

.emotion-47 {
  background-color: #E4E4E4;
  display: block;
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0px;
  left: 0px;
}

.emotion-48 {
  background-color: #577FFB;
  position: absolute;
  bottom: 0px;
  left: 0px;
}

.emotion-49 {
  margin: 0;
  padding: 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button1
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-6"
      >
        <table
          class="emotion-7"
        >
          <thead>
            <tr>
              <th
                class="emotion-8"
              >
                Name
              </th>
              <th
                class="emotion-9"
              >
                Type
              </th>
              <th
                class="emotion-9"
              >
                Default
              </th>
              <th
                class="emotion-9"
              >
                Description
              </th>
              <th
                class="emotion-12"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-13"
            >
              <td
                class="emotion-14"
              >
                children
              </td>
              <td
                class="emotion-15"
              >
                <div
                  class="emotion-16"
                >
                  <p
                    class="emotion-17"
                  >
                    string
                  </p>
                </div>
              </td>
              <td
                class="emotion-15"
              />
              <td
                class="emotion-15"
              >
                Description
              </td>
              <td
                class="emotion-20"
              >
                <div
                  class="emotion-21"
                >
                  <div
                    class="emotion-22"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-23"
                    >
                      <div
                        class="emotion-24"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-25 emotion-26"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          Button2
        </span>
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-32"
        data-testid="tab-group"
      >
        <div
          class="emotion-33"
          data-testid="tab-bar"
        >
          <div
            aria-orientation="horizontal"
            class="emotion-34"
            role="tablist"
          >
            <div
              class="emotion-35"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-36"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="true"
                  class="emotion-37"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="emotion-38"
                  >
                    <div
                      class="emotion-39"
                    >
                      <span
                        class="emotion-40"
                      >
                        Props
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-35"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-36"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="false"
                  class="emotion-43"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="emotion-38"
                  >
                    <div
                      class="emotion-39"
                    >
                      <span
                        class="emotion-40"
                      >
                        Overrides
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-47"
              data-testid="tab-bar-track"
              role="presentation"
            />
            <div
              aria-hidden="true"
              class="emotion-48"
              data-testid="tab-bar-indicator"
              role="presentation"
              style="width: 0px; height: 2px; transform: translateX(0px);"
            />
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="mock-nk-1"
          class="emotion-49"
          data-testid="tab-panel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-8"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                  <th
                    class="emotion-12"
                  >
                    Required
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-14"
                  >
                    children
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <div
                      class="emotion-16"
                    >
                      <p
                        class="emotion-17"
                      >
                        string
                      </p>
                    </div>
                  </td>
                  <td
                    class="emotion-15"
                  />
                  <td
                    class="emotion-15"
                  >
                    Description
                  </td>
                  <td
                    class="emotion-20"
                  >
                    <div
                      class="emotion-21"
                    >
                      <div
                        class="emotion-22"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-23"
                        >
                          <div
                            class="emotion-24"
                          >
                            <svg
                              aria-hidden="true"
                              class="emotion-25 emotion-26"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0V0z"
                                fill="none"
                              />
                              <path
                                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="mock-nk-1"
          class="emotion-49"
          data-testid="tab-panel"
          hidden=""
          role="tabpanel"
          tabindex="-1"
        >
          <div
            class="emotion-6"
          >
            <table
              class="emotion-7"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-8"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-9"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-13"
                >
                  <td
                    class="emotion-14"
                  >
                    spaceInset
                  </td>
                  <td
                    class="emotion-15"
                  >
                    <div
                      class="emotion-16"
                    >
                      <p
                        class="emotion-17"
                      >
                        MQ&lt;string&gt;
                      </p>
                    </div>
                  </td>
                  <td
                    class="emotion-15"
                  >
                    Description.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
